Fixing: -Error: Unknown property 'http-equiv' -The 'drawSignature' function /hook performance -Signature section spacing

--- a/styles/signature-builder.scss
+++ b/styles/signature-builder.scss
@@ -1,21 +1,20 @@
 @import 'variables.scss';
 
 .signature-builder{
-    padding: 10em 0;
+    padding: 12em 0;
     background-color: #f0f8ff;
 
     .text-container{
         display: block;
-        margin-bottom: 5em;
+        padding-bottom: 9em;
         h1{
             font-family: $primary-font-family;
             font-size: 4em;
             color: $base-color;
             line-height: 1.2;
-            margin-bottom: 0.4em;
             text-align: center;
             width: 70%;
-            margin: 14px auto;
+            margin: 0px auto;
         }
     }
     h4{
